# docforge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.e2e  Makefile  README.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  poe_tasks.toml  pyproject.toml  uv.toml
docs/archive/: case-matrix-build.md  first-tier-failures.md  functional-requirements.md  lifecycle-and-evidence-flow.md  mvp.md  observability-operations.md  retrieval-hierarchy.md
docs/delivery/: architecture.md  design-notes.md  evals.md  install-macos.md  runbooks.md  smoke-test-e2e.md  workflow-old.md
docs/engineering/: code-mode.md  python-domain-modeling.md  python-logging.md  python-testing.md
docs/evergreen/: mvp.md
docs/harness/: AGENTS.md  README.md
docs/harness/conventions/: adr-directory-conventions.md
docs/harness/playbooks/: README.md  defect.md  feature.md  operations.md  refactor.md  spike.md
docs/harness/scripts/: init-docs.sh  lint-docs.sh  list-workstreams.sh  new-workstream.sh  validate-frontmatter.sh
docs/harness/taxonomy/: workstream-taxonomy.md
docs/harness/templates/: adr.md  decisions.md  evidence.md  framing.md  handoff.md  workstream.md
docs/workstreams/: ws-001-embeddings-structure.md  ws-002-config-plan.md  ws-002-config.md  ws-003-chunking-problems.md
evals/cases/: README.md  answer_keys.schema.json  cases.schema.json  example-quiestions.md
evals/cases/sets/ambiguous_conflicting_cases_rn2/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/ingestion_structure_stress_cases_rn3/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/ingestion_structure_stress_cases_rn3_a1_harder/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/partial_support_synthesis_cases_rn2/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/partial_synthesis_research_1/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/supported_localized_explanation_cases_rn2/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/supported_lookup_research_1/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/supported_source_navigation/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/unsupported_in_corpus_cases_rn2/: answer_keys.jsonl  cases.jsonl
evals/cases/sets/unsupported_question_type_cases_rn2/: answer_keys.jsonl  cases.jsonl
evals/corpus/: config-reference-1.md  policy-1.md  research-notes-1.md  research-notes-2.md  research-notes-3.md
observability/grafana/dashboards/: central-eval-observability.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/loki/: config.yaml
observability/vector/: vector.yaml
scripts/: container-log-wrapper.sh  dev.sh  prepare_compose_logs.sh
scripts/devex/: resolve_api_base_url.py
src/doc_forge/: answering.py  documents.py  embeddings.py  ports.py  retrieval.py  runtime.py  services.py
src/doc_forge/answer_synthesis/: __init__.py  contracts.py  ollama_client.py  ollama_synthesizer.py  prompting.py
src/doc_forge/app/: api.py  dependencies.py  runtime_checks.py  settings.py
src/doc_forge/devtools/: api_discovery.py  demo_answer_smoke.py  docker_local_generator.py  docker_local_synthesizer.py  embedding_models.py  evalops_loader.py  repo_clean.py  secret_scan.py
src/doc_forge/embedding/: __init__.py  contracts.py  deterministic.py  records.py  sentence_transformer.py  sentence_transformer_loader.py  vectors.py
src/doc_forge/lifecycle/: worker.py
src/doc_forge/persistence/: in_memory_documents.py  in_memory_embeddings.py  in_memory_ingestion.py
src/doc_forge/processing/: __init__.py  document_structure.py
tests/: conftest.py  test_answer_synthesis.py  test_answering.py  test_answering_api.py  test_api_discovery.py  test_app_api.py  test_app_settings.py  test_demo_answer_smoke.py  test_dev_script.py  test_document_structure.py  test_documents.py  test_documents_api.py  test_embedding_model_ops.py  test_embeddings.py  test_import.py  test_retrieval.py  test_runtime_checks.py  test_services.py
tests/fixtures/: complex-technical-document.md
(+14 files in other folders)
